<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvConsultas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/editar_consulta"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvCamposObrigatorios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:text="@string/campos_obrigatorios" />

    <TextView
        android:id="@+id/tvHoraInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textColor="#000"
        android:text="@string/data_hora_inicio" />

    <EditText
        android:id="@+id/etHoraInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="datetime" />

    <TextView
        android:id="@+id/tvHoraFim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:textColor="#000"
        android:text="@string/data_hora_fim" />

    <EditText
        android:id="@+id/etHoraFim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="datetime" />

    <TextView
        android:id="@+id/tvObservacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:text="@string/observacao" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Informações Extras" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/editar" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/excluir" />
    </LinearLayout>

</LinearLayout>